--- a/components/go-hcjnbdke/overlays/development/deployment-patch.yaml
+++ b/components/go-hcjnbdke/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-hcjnbdke
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-hcjnbdke:fba1b5d8e64c46c2d6c105d8859ef7bfc2baff6c@sha256:d2a2b7723626cf033ea30341f4a2197a201f61779e3e04ffc5e7a68670dd7f44
+          name: container-image
